<resources>
    <string name="app_name">Gift Cards</string>
    <string name="title_activity_preference">PreferenceActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="navigation_menu_main">Stores</string>
    <string name="navigation_menu_cards">Cards</string>
    <string name="navigation_menu_favorites">Favorites</string>
    <string name="stores_selection_text">Select</string>
    <string name="stores_reselect_selection_text">Reselect</string>
    <string name="stores_clear_selection_text">Clear</string>
    <string name="separation_button_text">OR</string>

    <string name="store_dialog_title">@string/navigation_menu_favorites</string>
    <string name="store_dialog_add_button_text">Add Store</string>
    <string name="store_dialog_cancel_button_text">@string/cancel</string>
    <string name="store_dialog_remove_button_text">@string/remove</string>
    <string name="remove_all_favorites">Remove all</string>
    <string name="favorites_screen_title">@string/navigation_menu_favorites</string>
    <string name="store_dialog_remove_message">Do you want to remove \'%s\' store?</string>
    <string name="store_dialog_add_message">Do you want to add \'%s\' store to favorites?</string>
    <string name="store_dialog_remove_all_message">Do you want to remove all stores?</string>
    <string name="add_card_title">New Card</string>
    <string name="add_card_select_card">Select card</string>
    <string name="add_card_fill_details_message">Fill card details:</string>
    <string name="add_card_button">Save</string>
    <string name="add_card_name_hint">Card Name</string>
    <string name="add_card_discount_hint">Discount (percentage)</string>
    <string name="add_card_number_hint">Card Number</string>
    <string name="add_card_cvv_hint">CVV</string>
    <string name="add_card_expiration_hint">Expiration Date</string>
    <string name="add_card_cards_dialog_title">Select Card</string>
    <string name="add_card_save_card_dialog_title">Save Card</string>
    <string name="add_card_save_card_dialog_message">Are you sure you would like to save the card with missing data?</string>
    <string name="add_card_save_card_dialog_yes_button_text">@string/yes</string>
    <string name="add_card_save_card_dialog_cancel_button_text">@string/cancel</string>
    <string name="landing_screen_title">Welcome</string>
    <string name="landing_screen_subtitle">Enter card</string>
    <string name="cards_edit_card_dialog_edit_button_text">Edit</string>
    <string name="cards_remove_card_dialog_title">Remove Card</string>
    <string name="cards_dialog_cancel_button_text">@string/cancel</string>
    <string name="cards_dialog_remove_button_text">@string/remove</string>
    <string name="initializing_text">Initializing…</string>
    <string name="initializing_dialog_title">Server Data Changed</string>
    <string name="initializing_dialog_text">Current data isn\'t accurate due to server\'s data has changed. Please initialize the app</string>
    <string name="initializing_dialog_button">Initialize</string>
    <string name="main_select_cards_dialog_title">Select Cards</string>
    <string name="main_select_cards_dialog_button_text">Close</string>
    <string name="all_cards_selected_text">All cards are selected</string>
    <string name="cards_not_selected_text">Some cards aren\'t selected</string>
    <string name="cards_not_selected_text_exe">%1$s/%2$s cards are selected</string>
</resources>