<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable name="card" type="com.example.composefirsttry.giftcard.model.GiftCard"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/top_background"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        tools:context=".giftcard.ui.addcard.AddCardFragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="6dp"
            android:text="@string/add_card_title"
            android:textSize="@dimen/small_title_text_size"
            android:textColor="@color/very_dark_accent"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_store"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="18dp"
                >

                <FrameLayout
                    android:id="@+id/card_image_layout"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    >
                    <ImageView
                        android:id="@+id/card_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="12dp"
                        app:loadImage="@{card.imageRes}"
                        android:scaleType="fitXY"
                        tools:src="@drawable/max"
                        android:visibility="@{card.imageRes == 0 ? View.GONE : View.VISIBLE, default=gone}"/>

                    <ImageView
                        android:id="@+id/card_image_placeholder"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="12dp"
                        android:src="@drawable/ic_add_card"
                        android:background="@drawable/store_frame"
                        android:visibility="@{card.imageRes == 0 ? View.VISIBLE : View.GONE, default=visible}"
                        />
                </FrameLayout>

                <TextView
                    android:id="@+id/select_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/add_card_select_card"
                    android:textSize="@dimen/smallest_text_size"
                    android:textColor="@color/very_dark_accent"
                    android:gravity="center"
                    app:layout_constraintTop_toBottomOf="@id/card_image_layout"
                    />

                <TextView
                    android:id="@+id/fill_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/add_card_fill_details_message"
                    android:textSize="@dimen/small_main_text_size"
                    android:textColor="@color/very_dark_accent"
                    app:layout_constraintTop_toBottomOf="@id/select_card"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/card_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/fill_details"
                    app:errorEnabled="true"
                    app:endIconMode="clear_text"
                    style="@style/Widget.App.TextInputLayout"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/card_name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_card_name_hint" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/card_discount_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/card_name_layout"
                    app:errorEnabled="true"
                    app:endIconMode="clear_text"
                    style="@style/Widget.App.TextInputLayout"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/card_discount_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_card_discount_hint" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/card_number_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/card_discount_layout"
                    app:errorEnabled="true"
                    app:endIconMode="clear_text"
                    style="@style/Widget.App.TextInputLayout"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/card_number_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_card_number_hint" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/card_cvv_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/card_number_layout"
                    app:errorEnabled="true"
                    app:endIconMode="clear_text"
                    style="@style/Widget.App.TextInputLayout"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/card_cvv_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_card_cvv_hint" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/card_expiration_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/card_cvv_layout"
                    app:errorEnabled="true"
                    app:endIconMode="clear_text"
                    style="@style/Widget.App.TextInputLayout"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/card_expiration_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_card_expiration_hint" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_card_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/add_card_button"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textColor="@color/very_dark_accent"
                    android:background="@drawable/store_frame"
                    app:layout_constraintTop_toBottomOf="@+id/card_expiration_layout"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>