<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <variable
            name="model"
            type="com.example.composefirsttry.giftcard.ui.common.dialog.CustomDialogModel"
            />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_shape"
        android:paddingBottom="24dp"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@{model.title}"
            android:textSize="@dimen/small_title_text_size"
            android:textColor="@color/very_dark_accent"
            android:gravity="center"
            android:textStyle="bold"
            tools:text="@string/add_card_save_card_dialog_title"
            />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:paddingTop="12dp"
            android:paddingEnd="24dp"
            android:paddingStart="24dp"
            android:layout_gravity="center"
            android:text="@{model.message}"
            android:visibility="@{model.messageVisible ? View.VISIBLE : View.GONE, default=visible}"
            android:textColor="@color/very_dark_accent"
            android:textSize="@dimen/smaller_text_size"
            tools:text="@string/add_card_save_card_dialog_message"
            />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="title, message" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/positive_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/negative_button"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/store_frame"
            android:textSize="@dimen/smaller_text_size"
            android:text="@{model.positiveButtonText}"
            android:visibility="@{model.positiveButtonVisible ? View.VISIBLE : View.GONE, default=visible}"
            android:textColor="@color/very_dark_accent"
            android:textStyle="bold"
            tools:text="@string/add_card_save_card_dialog_yes_button_text"
            tools:visibility="gone"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/negative_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toStartOf="@id/positive_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/positive_button"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/store_frame"
            android:textSize="@dimen/smaller_text_size"
            android:text="@{model.negativeButtonText}"
            android:visibility="@{model.negativeButtonVisible ? View.VISIBLE : View.GONE, default=visible}"
            android:textColor="@color/very_dark_accent"
            android:textStyle="bold"
            tools:text="@string/add_card_save_card_dialog_cancel_button_text"
            tools:visibility="gone"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="@{model.itemsVisible ? View.VISIBLE : View.GONE, default=gone}"
            tools:visibility="visible"
            tools:itemCount="4"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/card_custom_dialog_row"
            tools:scrollbars="vertical" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
